--- a/my-app/public/styles.css
+++ b/my-app/public/styles.css
@@ -30,7 +30,7 @@ body {
     width: 250px;
     margin-bottom: 5px;
     text-align: center;
-    background-color:#CFFDE1
+    background-color: cadetblue;
   }
   button{
     height: 40px;
